@@ -1,4 +1,6 @@
 - SVN
+  - feature: added example Setup SQL and configuration for SQLite
+  - change:  modified MySQL Setup SQL to use 512 characters in EVENT column
   - feature: added new Javascript Frontend based on ExtJS (by Johannes)
   - feature: new Modules 30_HUEDevice and 31_HUEBridge for phillips hue and 
              smartlink devices (by justme1968)
