@@ -522,3 +522,5 @@
   
 - Tue Feb 19 2013 (Johannes)
   - added new Javascript Frontend based on ExtJS (by Johannes)
+  - added example Setup SQL and configuration for SQLite
+  - extended the MySQL Setup SQL to use 512 characters in EVENT column
